Fixed double border on top of project find results

--- a/styles/project-find-results.less
+++ b/styles/project-find-results.less
@@ -89,7 +89,7 @@ ul.list-tree.matches {
   }
 
   &:first-child {
-    margin-top: 56px;
+    margin-top: 57px;
   }
 }
 
@@ -122,7 +122,6 @@ ul.list-tree.matches {
   background-image: none;
   font-weight: bold;
   background-color: fade(@base-background-color, 90%);
-  border-top: 1px solid @tab-bar-border-color;
   position: absolute;
   width: 100%;
   z-index: 1;
